# loom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  INSTALL.md  PLAN.md  PLUGIN_PLAN.md  README.md  loom.toml  loom.toml.example  package.json  pnpm-lock.yaml  pyproject.toml
.github/: pull_request_template.md
docs/: 2026-02-28-SYSTEM-TECHNICAL-DESIGN.md  CONFIG.md  DB-MIGRATIONS.md  DESKTOP-MACOS-PACKAGING.md  agent-integration.md  auth.toml.example  creating-packages.md  telemetry-catalog.md  tutorial.html
planning/: 00-PROJECT-OVERVIEW.md  01-PROJECT-STRUCTURE.md  02-ORCHESTRATOR-LOOP.md  03-TASK-STATE-MEMORY.md  04-MODEL-ROUTER.md  05-TOOL-SYSTEM.md  06-VERIFICATION-GATES.md  07-API-SERVER.md  08-EVENT-SYSTEM.md  09-TUI-CLIENT.md  10-AGENT-INTEGRATION.md  11-WORKSPACE-FILES.md  12-PROMPT-ARCHITECTURE.md  13-ERROR-RECOVERY.md  14-HUMAN-IN-THE-LOOP.md  15-LEARNING-SYSTEM.md  16-ADAPTIVE-LEARNING.md  2026-02-25-SYSTEM-TECHNICAL-DESIGN.md  gap-analysis-vs-claude-code.md
scripts/: active_run_latency_smoke.py  build_macos_desktop_bundle_resources.py  build_macos_desktop_dmg.sh  check_db_migration_policy.py  check_desktop_release_version.py  check_telemetry_coverage.py  check_version_consistency.py  latency_smoke.py  smoke_macos_desktop_bundle.py  test.sh
tests/: conftest.py  test_anthropic_provider.py  test_api.py  test_approval.py  test_ask_user.py  test_auth_config.py  test_build_macos_desktop_dmg.py  test_cli.py  test_cli_import_contracts.py  test_code_analysis.py  test_confidence.py  test_config.py  test_config_runtime.py  test_content.py  test_content_utils.py  test_cowork.py  (+104 more)
(+571 files in other folders)
